--- a/adoption.html
+++ b/adoption.html
@@ -7,7 +7,7 @@
 
   <body>
   <header>
-  	<img src="logo.jpg">
+  	<img src="Logo.jpg">
   	<h1 class="header"> Exotic Animal Rescue</h1>
   	<nav>
   		<ul>
