--- a/frontpage.html
+++ b/frontpage.html
@@ -8,7 +8,7 @@
 
 <body>
 <header>
-	<img class="logo" src="logo.jpg">
+	<img class="logo" src="Logo.jpg">
 	<h1 class="header"> Exotic Animal Rescue</h1>
 	<nav>
 		<ul>
