--- a/adoption.html
+++ b/adoption.html
@@ -1,7 +1,7 @@
   <!DOCTYPE html>
   <html>
   <head>
-
+    <link rel="stylesheet" type="text/css" href="page2_chris.css" href="stylesheet">
   	<title>Animal Shelter</title>
   </head>
 
@@ -11,7 +11,8 @@
   	<h1 class="header"> Exotic Animal Rescue</h1>
   	<nav>
   		<ul>
-  			<li><a href="#">About</a></li>
+  			<li><a href="index.html">Home</a></li>
+        <li><a href="#">About</a></li>
   			<li> <a href="#">Adopt</a></li>
   			<li> <a href="#">Volunteer </a></li>
   			<li> <a href="#">Donate</a></li>
