--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 	<h1 class="header"> Exotic Animal Rescue</h1>
 	<nav>
 		<ul>
+			<li><a href="index.html">Home</a></li>
 			<li><a href="about.html">About</a></li>
-			<li> <a href="adopt.html">Adopt</a></li>
+			<li> <a href="adoption.html">Adopt</a></li>
 			<li> <a href="volunteer.html">Volunteer </a></li>
 			<li> <a href="donate.html">Donate</a></li>
 			<li><a href="events.html">Events</a></li>
